add section portraits

--- a/style.css
+++ b/style.css
@@ -1,24 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap');
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   width: 100%;
   margin: 0 auto;
   font-size: 18px;
   font-family: 'Roboto', sans-serif;
+  background: #f1faee;
+  padding: 10px;
+  box-sizing: border-box;
 }
+
+/* Section Navigation */
 
 nav {
   display: flex;
-  background: grey;
+  background: #1d3557;
+  color: #f1faee;
   justify-content: center;
   text-transform: uppercase;
+  align-items: center;
 }
 
 nav ul {
   display: flex;
   margin: 0px;
   padding: 0px;
-  background: rgb(62, 68, 54);
+  flex-wrap: wrap;
 }
 
 nav li {
@@ -27,9 +38,16 @@ nav li {
 
 nav li a {
   display: inline-block;
-  padding: 5px;
+  padding: 10px 5px;
+  text-decoration: none;
+  color: #a8dadc;
 }
 
+nav li a:hover {
+  color: #e63946;
+}
+
+/* Section Header */
 header {
 }
 
@@ -37,16 +55,64 @@ header h1 {
   font-size: 3em;
   margin: 0.2em 0;
   text-align: center;
+  color: #1d3557;
+  background: #f1faee99;
+  width: 100%;
 }
 
 header p {
   text-align: center;
   font-size: 2em;
   margin: 0.2em 0;
+  color: #457b9d;
+  background: #f1faee99;
+  width: 100%;
+}
+
+header .banner {
+  background-image: url('./images/camila-cordeiro-LZEaYnWM4Ro-unsplash.jpg');
+  background-size: cover;
+  background-position: center;
+  min-height: 50vh;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-end;
 }
 
 section {
+  /* padding: 10px; */
+}
+
+section h2 {
   padding: 10px;
+  background: #a8dadc;
+}
+
+section h3 {
+  margin: 0px 0px 10px 0px;
+}
+
+section img {
+  width: 100%;
+  height: auto;
+}
+
+.row {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+.one-quarter {
+  flex: 1 1 100%;
+}
+
+.three-quarter {
+  flex: 1 1 100%;
+}
+
+.quarter-quarter {
+  flex: 1 1 100%;
 }
 
 @media only screen and (max-width: 599px) {
@@ -55,6 +121,23 @@ section {
 @media only screen and (min-width: 600px) {
   nav {
     font-size: 1.5rem;
+  }
+
+  .row {
+    display: flex;
+    flex-wrap: nowrap;
+  }
+
+  .one-quarter {
+    flex: 0 1 25%;
+  }
+
+  .three-quarter {
+    flex: 0 1 75%;
+  }
+
+  .quarter-quarter {
+    flex: 1 1 100%;
   }
 }
 
