--- a/2021/ottakring-run-club/style.css
+++ b/2021/ottakring-run-club/style.css
@@ -1,22 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap');
+
 * {
   padding: 0px;
   margin: 0px;
 }
 
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #a8dadc;
+  color: #1d3557;
+  line-height: 1.7;
+}
+
+section {
+  padding-bottom: 20px;
+}
+
 .container {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: 1fr;
   grid-template-rows: auto;
   grid-template-areas:
-    'nav nav nav nav'
-    'header header header header'
-    'main main . sidebar'
-    'footer footer footer footer';
+    'nav'
+    'header'
+    'main'
+    'sidebar'
+    'footer';
+
+  /* min-width: 300px; */
+  margin: 15px 15px 5px 5px;
+  gap: 30px;
+}
+
+ul {
+  margin-left: 20px;
 }
 
 nav {
   grid-area: nav;
-  height: 60px;
+  text-transform: uppercase;
 }
 
 nav ul {
@@ -33,36 +55,181 @@ nav li a {
   display: inline-block;
   text-decoration: none;
   padding: 10px;
+  font-weight: 700;
+  color: #1d3557;
 }
 
 nav li a:hover {
-  background-color: aliceblue;
+  color: #e63946;
 }
 
 header {
   grid-area: header;
+  position: relative;
 }
 
 main {
+  position: relative;
   grid-area: main;
+  padding: 30px;
+}
+
+.sidebar {
+  grid-area: sidebar;
+  align-self: flex-start;
+  padding: 30px;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+.sidebar .fact {
+  margin-bottom: 40px;
+}
+
+.factLabel {
+  font-weight: 700;
 }
 
 footer {
   grid-area: footer;
+  padding: 15px 30px;
+  text-align: center;
 }
 
 .about {
-  background-color: aliceblue;
 }
-.mission {
+
+blockquote {
+  display: block;
+  position: relative;
+  font-family: 'Amatic SC', cursive;
+  font-size: 3rem;
+  width: 300px;
+  margin: 30px auto;
+}
+
+.border-box {
+  background-color: #f1faee;
+  border: 2px solid #457b9d;
+  box-shadow: 10px -6px #457b9d;
+}
+
+img {
+  width: 100%;
+  height: auto;
+  position: relative;
+  display: block;
+}
+
+#banner {
+  position: absolute;
+  bottom: 20%;
+  left: 20px;
+  font-size: 2.2vw;
+}
+
+#banner h1 {
+  background-color: #fff7;
+  padding: 0px 5px;
+  border-radius: 1.5vw;
+}
+
+.pictures {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+  margin: 20px;
+}
+
+.picture {
+  flex: 0 1 200px;
+  position: relative;
+}
+
+.pictures .description {
+  background-color: #457b9d;
+  color: #f1faee;
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  bottom: 0px;
+}
+
+form {
+  display: inline-block;
+  position: relative;
+}
+
+#join label {
+  display: inline-block;
+  width: 80px;
+}
+
+#join input {
+  width: 160px;
+}
+
+#join button {
+  position: absolute;
+  width: 80px;
+  right: 0px;
+
+  background-color: #a8dadc;
+  border: #1d3557 solid 1px;
+  font-weight: 700;
+  padding: 3px 0px;
+}
+
+#join button:hover {
+  background-color: #f1faee;
+  color: #e63946;
+}
+
+#join * {
+  margin-bottom: 3px;
 }
 
 @media only screen and (max-width: 599px) {
+  nav li a {
+    font-size: smaller;
+    padding: 10px;
+  }
+
+  .container {
+    margin: 0;
+    gap: 10px;
+  }
+  .border-box {
+    background-color: #f1faee;
+    border: 2px solid #457b9d;
+    box-shadow: none;
+  }
 }
 @media only screen and (min-width: 600px) {
 }
 
 @media only screen and (min-width: 980px) {
+  .container {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-areas:
+      'nav nav nav nav'
+      'header header header header'
+      'main main main sidebar'
+      'footer footer footer footer';
+
+    max-width: 980px;
+    margin: 20px auto;
+  }
+
+  #banner {
+    font-size: 21.5px;
+  }
+
+  .pictures {
+    margin: 20px 0px;
+  }
 }
 
 @media only screen and (min-width: 1260px) {
